--- a/assets/sass/_03-vars-mixins-stitching-file.scss
+++ b/assets/sass/_03-vars-mixins-stitching-file.scss
@@ -17,4 +17,5 @@
 @import "mixins/_backgrounds.scss";
 @import "mixins/_css-shapes.scss";
 @import "mixins/_animation.scss";
+@import "mixins/_animation-effects.scss";
 @import "mixins/_project-specific.scss";
